# tui-file-browser

./: .gitignore  CMakeLists.txt  test_pdf.cpp  test_playback.cpp  test_process_manager.cpp
.github/workflows/: release.yml
src/: app_state.hpp  logger.hpp  main.cpp  previewer.cpp  previewer.hpp  process_manager.cpp  process_manager.hpp  search_engine.cpp  search_engine.hpp  ui_layout.cpp  ui_layout.hpp
